[package]
name = "public_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
sha2 = "0.11.0-pre.3"
rand = "0.8.5"
sha3 = "=0.11.0-pre.3"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"
async-std = "1.9"
time = "0.3.34"
prost = "0.12.3"
tonic = "0.11.0"
egui = "0.26.2"
eframe = { version = "0.26.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = "1.0.197"
env_logger = "0.11.3"
log = "0.4.21"
wasm-bindgen-futures = "0.4.42"

[build-dependencies]
tonic-build = "0.11.0"

