[package]
name = "public_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
sha2 = "0.11.0-pre.3"
rand = "0.8.5"
sha3 = "=0.11.0-pre.3"
rsa = { version = "0.9.6", features =["sha2"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"
async-std = "1.9"
time = "0.3.34"
prost = "0.12.3"
prost-types = "0.12.6"
tonic = { version = "0.11.0", features = ["tls"] }
log = "0.4.21"
async-recursion = "1.1.0"
regex = "1.10.4"
reqwest = "0.12.4"
serde_json = "1.0.116"
x509-certificate = "0.23.1"
pem = "3.0.4"
base64 = "0.22.0"

[build-dependencies]
tonic-build = "0.11.0"

